Add move/copy operations to datatype API
