# src/Umbraco.Cms.Api.Management/ViewModels/DataType/DataTypeCopyModel.cs
@@ -1,0 +1,6 @@
+namespace Umbraco.Cms.Api.Management.ViewModels.DataType;
+
+public class DataTypeCopyModel
+{
+    public Guid TargetKey { get; set; }
+}
