# src/Umbraco.Cms.Api.Management/ViewModels/DataType/DataTypeMoveModel.cs
@@ -1,0 +1,6 @@
+namespace Umbraco.Cms.Api.Management.ViewModels.DataType;
+
+public class DataTypeMoveModel
+{
+    public Guid TargetKey { get; set; }
+}
